tests/fixtures/grammar/negative/unclosed-module.asfl
module SYSTEM_Bad;
var x: nat;
